name:           json-to-hs
version:        0.1.0.0
description:    
homepage:       
bug-reports:    
author:         Tobias Dammers
maintainer:     tdammers@gmail.com
copyright:      2018 Tobias Dammers
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/tdammers/json-to-hs

executable json-to-hs
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , aeson >=1.4.2.0 && <=1.5
               , bytestring >=0.10.8.2 && <=0.11
               , containers >=0.6.0.1 && <=0.7
               , mtl >=2.2.2 && <=2.3
               , text >=1.2.3.1 && <=1.3
               , template-haskell >=2.14.0.0 && <=2.15
               , transformers >=0.5.5.0 && <=0.6
               , unordered-containers >=0.2.9.0 && <=0.3
  other-modules:
  default-language: Haskell2010
